--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 beautifulsoup4==4.8.1
 bs4==0.0.1
+Click==7.0
+Flask==1.0.2
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
 python-allrecipes==0.2.1
 soupsieve==1.9.4
+Werkzeug==0.16.0
