--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /env
 __pycache__
 *.pyc
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
