--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ beautifulsoup4==4.8.1
 boundio==0.0.2
 bs4==0.0.1
 cchardet==2.1.4
+certifi==2019.9.11
 cffi==1.13.0
 chardet==3.0.4
 Click==7.0
@@ -19,7 +20,9 @@ MarkupSafe==1.1.1
 multidict==4.5.2
 pycares==3.0.0
 pycparser==2.19
+requests==2.22.0
 soupsieve==1.9.4
+urllib3==1.25.6
 websockets==8.0.2
 Werkzeug==0.16.0
 yarl==1.3.0
